--- a/css/index.css
+++ b/css/index.css
@@ -19,17 +19,22 @@ body {
   color: #333333;
   font-weight: bold;
   font-size: 28px;
+  text-decoration: none;
 }
 
 .blog-navlist {
   display: flex;
   align-items: baseline;
-  color: #787878;
   font-size: 16px;
 }
 
 .blog-navlist li ~ li {
   padding-left: 21px;
+}
+
+.blog-navlist__item {
+  text-decoration: none;
+  color: #787878;
 }
 
 .blog-topic {
