--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,7 @@ body {
 .blog-block__content {
   font-size: 14px;
   margin-bottom: 16px;
+  line-height: 1.25;
 }
 
 .blog-block__read-more {
@@ -124,4 +125,43 @@ footer {
   padding: 11px;
   text-align: center;
   font-size: 14px;
+}
+
+/* login */
+
+.blog-block__login {
+  border: 1px solid #9a9a9a;
+  width: 527px;
+  box-sizing: border-box;
+  padding: 73px 65px;
+  margin-top: -50px;
+  margin-bottom: 116px;
+  background-color: white;
+}
+
+.blog-block__login-title {
+  font-size: 32px;
+  text-align: center;
+  margin-bottom: 61px;
+}
+
+.blog-block__login-label {
+  margin-right: 21px;
+  margin-bottom: 16px;
+  font-size: 14px;
+}
+
+.blog-block__login-input {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 23px;
+  border: 1px solid black;
+}
+
+.blog-block__login-submit {
+  width: 100%;
+  height: 56px;
+  color: white;
+  margin-top: 73px;
+  background-image: linear-gradient(#000000, #434343);
 }
