--- a/css/index.css
+++ b/css/index.css
@@ -207,3 +207,58 @@ footer {
   text-decoration: none;
   margin-left: 8px;
 }
+
+/* edit_post */
+
+.blog-block__edit {
+  width: 920px;
+  box-sizing: border-box;
+  padding: 10px;
+  margin-top: -50px;
+  margin-bottom: 146px;
+  background-color: white;
+}
+
+.blog-block__edit-form {
+  border: 1px solid #9a9a9a;
+  padding: 30px;
+}
+
+.edit-title {
+  font-size: 18px;
+  margin-bottom: 25px;
+}
+
+.blog-block__edit-input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border: 1px solid #d7d7d7;
+  padding: 12px 11px;
+  margin-bottom: 20px;
+}
+
+.blog-block__edit-input::placeholder {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.blog-block__edit-textarea {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.blog-block__edit-submit {
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid #737373;
+  width: 133px;
+  height: 41px;
+  float: right;
+}
+
+.clearboth {
+  clear: both;
+}
