Style duplicated css

--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,7 @@ body {
   font-weight: bold;
 }
 
-.blog-block__edit {
+.blog-block__edit-btn {
   border: 1px solid #a8a8a8;
   border-radius: 0;
   color: #a8a8a8;
