--- a/css/index.css
+++ b/css/index.css
@@ -113,7 +113,16 @@ body {
   line-height: 1.25;
 }
 
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .blog-block__read-more {
+  display: inline-block;
+  text-decoration: none;
+  color: black;
   border: 1px solid black;
   border-radius: 0;
   padding: 12px;
